fix(ui/dropdown): use smaller h padding on non-coarse, so alignment better matches expectations
still not sure if it's too small on non-coarse. at least compared to the regular ones.

--- a/web_src/css/modules/dropdown.css
+++ b/web_src/css/modules/dropdown.css
@@ -8,7 +8,7 @@
 
 :root details.dropdown {
   --dropdown-box-shadow: 0 6px 18px var(--color-shadow);
-  --dropdown-item-padding: 0.5rem 1rem;
+  --dropdown-item-padding: 0.5rem 0.75rem;
 }
 
 @media (pointer: coarse) {
